adding vertical style

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,11 +14,11 @@
             var getToken = () => "<%=token%>"
         </script>
 
-        <div class="ballon">Choose a start date</div>
+        <div class="ballon">Choose a start date or click on a record</div>
 
         <div class="menu">
             <br/>
-            <p>Click to choose a date </p>
+            <p>Choose a start date or click on a record</p>
             <br/><br/><div id="startd"></div>
             <br/><div id="endd"></div><br/>
             
