--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <html>
-    <header>
+    <head>
         <title>Sleep Tracker</title>
+        <link rel="shortcut icon" href="img/icon.ico"/>
         <script src="jquery.js"></script>
         <script src="index.js"></script>
         <link rel="stylesheet" href="index.css"/>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    </header>
+    </head>
     <body>
         <script>
             var d = new Date();
