--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,10 @@
 <html>
-    <header>
+    <head>
         <title>Sleep Tracker</title>
+        <link rel="shortcut icon" href="img/icon.ico"/>
         <script src="jquery.js"></script>
         <link rel="stylesheet" href="index.css"/>
-    </header>
+    </head>
     <body>
         <style>input{margin:0.5em;}</style>
         <% if(locals.msg){ %>
